<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WeightAssistantActivity!</string>
    <string name="app_name">WeightAssistant</string>
    <string name="action_license_view">License</string>
    <string name="action_options">Options</string>
    <string name="entry_description">Gewicht</string>
    <string name="entry_kg">kg</string>
    <string name="entry_save">Speichern</string>
    <string name="button_add">Neuer Eintrag</string>
    <string name="addItem">Add Item</string>
    <string name="cancelItem">Cancel</string>
    <string name="button_display_data">Zeige Daten</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>
    <string name="simple_graph">Gewichtskurve</string>
    <string name="week_graph">Wochen Graph</string>
    <string name="titlePrefs">Einstellungen</string>
    <string name="text_graphics">Graphiken</string>
    <string name="text_dataHandling">Datenverwaltung</string>
    <string name="text_dataInput">Gewichtseingabe</string>
    <string name="text_myData_sizeHeader">Größe</string>
    <string name="text_myData_size">k.A.</string>
    <string name="text_personalData">Eigene Angaben</string> 
    <string name="text_myData_targetWeightHeader">Ziel</string> 
    <string name="text_myData_targetWeight">k.A.</string> 
    <string name="text_myData_bmiHeader">BMI</string>
    <string name="text_myData_bmi">k.A.</string>
    <string name="text_myData_lastWeekHeader">n.v.</string>
    <string name="text_myData_lastWeek">n.v.</string>
    <string name="text_myData_thisWeekHeader">n.v.</string>
    <string name="text_myData_thisWeek">n.v.</string>
    <string name="titleBackup">Backup</string>
    <string name="titleRestore">Restore</string>
    
    <string name="text_weekStatistic">Plan für diese Woche</string>
    <string name="text_weekStatistic_lastHeader">VoWo</string>
    <string name="text_weekStatistic_last">n.v.</string>
    <string name="text_weekStatistic_moHeader">Mo</string>
    <string name="text_weekStatistic_mo">nv.</string>
    <string name="text_weekStatistic_diHeader">Di</string>
    <string name="text_weekStatistic_di">nv.</string>
    <string name="text_weekStatistic_miHeader">Mi</string>
    <string name="text_weekStatistic_mi">nv.</string>
    <string name="text_weekStatistic_doHeader">Do</string>
    <string name="text_weekStatistic_do">nv.</string>
    <string name="text_weekStatistic_frHeader">Fr</string>
    <string name="text_weekStatistic_fr">nv.</string>
    <string name="text_weekStatistic_saHeader">Sa</string>
    <string name="text_weekStatistic_sa">nv.</string>
    <string name="text_weekStatistic_soHeader">So</string>
    <string name="text_weekStatistic_so">nv.</string>
    
</resources>