<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/text_dataInput" />

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/buttonAddEntry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/button_add" />

            <Button
                android:id="@+id/buttonDisplayData"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/button_display_data" />
        </LinearLayout>

       	<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/text_dataHandling" />
       	 
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/buttonImport"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/button_import" />

            <Button
                android:id="@+id/buttonExport"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/button_export" />
        </LinearLayout>

	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/text_graphics" /> 
	               
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="0.5" >

            <!-- 
            <Button
                android:id="@+id/buttonSimpleGraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple_graph" />
			-->
            <ImageButton
        		android:id="@+id/buttonSimpleGraph"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:contentDescription="@string/simple_graph"
        		android:src="@drawable/gewicht" />
			
            <!-- 
            <Button
                android:id="@+id/buttonWeekGraphOld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_graph" />
            -->
            
            <ImageButton
        		android:id="@+id/buttonWeekGraph"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:contentDescription="@string/week_graph"
        		android:src="@drawable/wochen" />
        </LinearLayout>
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/text_personalData" /> 
	               
        <LinearLayout
            android:id="@+id/linearLayoutMyData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" ><LinearLayout
                android:id="@+id/linearLayoutMyData_Size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/myData_sizeHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_sizeHeader" />

                <TextView
                    android:id="@+id/myData_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_size"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMyData_targetWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/myData_targetWeightHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_targetWeightHeader" />

                <TextView
                    android:id="@+id/myData_targetWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_targetWeight"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMyData_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/myData_bmiHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_bmiHeader" />

                <TextView
                    android:id="@+id/myData_bmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_bmi"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMyData_lastWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/myData_lastWeekHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_lastWeekHeader" />

                <TextView
                    android:id="@+id/myData_lastWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_lastWeek"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMyData_thisWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/myData_thisWeekHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_thisWeekHeader" />

                <TextView
                    android:id="@+id/myData_thisWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_myData_thisWeek"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            
		</LinearLayout>
        
    </LinearLayout>
    
</ScrollView>