<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0" >

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/entry_description" />

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:text="@string/entry_kg" />
        </LinearLayout>

        <Button
            android:id="@+id/Button01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/entry_save" />

        <DatePicker
            android:id="@+id/DatePicker01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35" />

        <TimePicker
            android:id="@+id/TimePicker01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35" />

        <TextView
            android:id="@+id/textEntryDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/entry_description" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textEntryKg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/entry_kg" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_save" />    
    
    <DatePicker
        android:id="@+id/entrydatePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TimePicker
        android:id="@+id/entrytimePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>